--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://qm.qq.com/cgi-bin/qm/qr?k=EgocZbi2zaSC3t6w_Q4qyU1omss8hC8g&authKey=xRRPFodQDGuHOTBu89p6xWrinFg0bQhyzHW+8eDPR0RE1YUgc3ISNlbmMBLhywBn&noverify=0";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=Gs5incjyMj32NDznS0cwPWK7-Gb600a0&authKey=OjI0bJVTAmkYHJT83lC4w1gBvLtavZT52cHeauUzy8irbW5olgnlNQS%2BSCR23vkm&noverify=0&group_code=839994739";
 </script>
 </body>
 </html>
