--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=Gs5incjyMj32NDznS0cwPWK7-Gb600a0&authKey=OjI0bJVTAmkYHJT83lC4w1gBvLtavZT52cHeauUzy8irbW5olgnlNQS%2BSCR23vkm&noverify=0&group_code=839994739";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=13uI_jHFVcy5-YAzUElbr3GVlMvbkwGy&authKey=N0unHjSx1uSgRf3uM4efogTdCkw0tgVnc7s7IPGH2Kz8NpX9AqXe3v7VGACC%2Bmdc&noverify=0&group_code=853142169";
 </script>
 </body>
 </html>
