--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=13uI_jHFVcy5-YAzUElbr3GVlMvbkwGy&authKey=N0unHjSx1uSgRf3uM4efogTdCkw0tgVnc7s7IPGH2Kz8NpX9AqXe3v7VGACC%2Bmdc&noverify=0&group_code=853142169";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=_xblJqmTwImEELhlzI5hUev4xVX_nhxU&authKey=wEsy0zERQwwRqJ34Q3XPRfj6Mz0LdGaeLIsxqr7JBk2fjzH8MaErid7rfA2Qbjlj&noverify=0&group_code=189277926";
 </script>
 </body>
 </html>
