--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=_xblJqmTwImEELhlzI5hUev4xVX_nhxU&authKey=wEsy0zERQwwRqJ34Q3XPRfj6Mz0LdGaeLIsxqr7JBk2fjzH8MaErid7rfA2Qbjlj&noverify=0&group_code=189277926";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=yT2TO4R2kqxuEcbvyv5fpIOzpX0H7EpQ&authKey=d0xjnkJuaerJq%2FYnjfV2rBI8dhzOgZfNFdFCQZVtwa46UEGauwxv2rq57Vm48n5y&noverify=0&group_code=850145220";
 </script>
 </body>
 </html>
