--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=yT2TO4R2kqxuEcbvyv5fpIOzpX0H7EpQ&authKey=d0xjnkJuaerJq%2FYnjfV2rBI8dhzOgZfNFdFCQZVtwa46UEGauwxv2rq57Vm48n5y&noverify=0&group_code=850145220";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ZZRXye4DugZC7hT9A6zhBLrW6NP9X0AD&authKey=WIseEJ5YVPObqVA9tOiuYf5SSW2gkk8%2FIeHbWKLo%2BDHpG%2Betw4STiynnYcYO%2Btw7&noverify=0&group_code=850145505";
 </script>
 </body>
 </html>
