--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ZZRXye4DugZC7hT9A6zhBLrW6NP9X0AD&authKey=WIseEJ5YVPObqVA9tOiuYf5SSW2gkk8%2FIeHbWKLo%2BDHpG%2Betw4STiynnYcYO%2Btw7&noverify=0&group_code=850145505";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=deVZ-YlfCYvFdV2jURPmvPWy19l8v4Za&authKey=uUUlr4GP7ZpS%2FQ4BwypznXtcoOkRsYm5hMgylVG9Y0KrOZGkNHTQ1erumYwOl%2BNe&noverify=0&group_code=599240900";
 </script>
 </body>
 </html>
