--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=deVZ-YlfCYvFdV2jURPmvPWy19l8v4Za&authKey=uUUlr4GP7ZpS%2FQ4BwypznXtcoOkRsYm5hMgylVG9Y0KrOZGkNHTQ1erumYwOl%2BNe&noverify=0&group_code=599240900";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=apAK7wiimGjkWuWlmYU-sLq28aC0e9am&authKey=d5W9emNoAmKGvi2evgqB1jBOv%2F%2B%2BhklykBY%2F3Mxo67te%2FLesFfj%2FleBn1KzBTtKM&noverify=0&group_code=639562665";
 </script>
 </body>
 </html>
