--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=apAK7wiimGjkWuWlmYU-sLq28aC0e9am&authKey=d5W9emNoAmKGvi2evgqB1jBOv%2F%2B%2BhklykBY%2F3Mxo67te%2FLesFfj%2FleBn1KzBTtKM&noverify=0&group_code=639562665";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=YjUT6ocjnqVmGKZ87DMWAK6ZXY6dnXCa&authKey=P9hue7kyUk%2FpB50%2FPV%2B6BMm9Zobb9UdBUcSE979QFyG6GgQXsC881r%2BBQIJJrXKW&noverify=0&group_code=109480501";
 </script>
 </body>
 </html>
