--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=YjUT6ocjnqVmGKZ87DMWAK6ZXY6dnXCa&authKey=P9hue7kyUk%2FpB50%2FPV%2B6BMm9Zobb9UdBUcSE979QFyG6GgQXsC881r%2BBQIJJrXKW&noverify=0&group_code=109480501";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=N9UsMQo0NEFXxKUtArhUJ72wrE8IuYq7&authKey=kgcyvH47x2d0voKY0v3DGIlaM1Q3Hk8ZYeQa8iFTD95N00s5Do1GyGjZeUa2hz4O&noverify=0&group_code=295510485";
 </script>
 </body>
 </html>
