--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=N9UsMQo0NEFXxKUtArhUJ72wrE8IuYq7&authKey=kgcyvH47x2d0voKY0v3DGIlaM1Q3Hk8ZYeQa8iFTD95N00s5Do1GyGjZeUa2hz4O&noverify=0&group_code=295510485";
+location.href="https://qm.qq.com/cgi-bin/qm/qr?k=SdpmNSijBwCGv3Xc1XY6_de1PoS-JzpU&jump_from=webapi&qr=1";
 </script>
 </body>
 </html>
