--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://qm.qq.com/cgi-bin/qm/qr?k=SdpmNSijBwCGv3Xc1XY6_de1PoS-JzpU&jump_from=webapi&qr=1";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=0CXsohaYN0oOs85WMpzPoab7Bv9SfQq9&authKey=yG%2BGejGhCWFCq8ypi7S01ksJd7aIDfehwlg27daOKMiY0Urr3SeeD0JrMW5Dqyyu&noverify=0&group_code=188488430";
 </script>
 </body>
 </html>
