--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=0CXsohaYN0oOs85WMpzPoab7Bv9SfQq9&authKey=yG%2BGejGhCWFCq8ypi7S01ksJd7aIDfehwlg27daOKMiY0Urr3SeeD0JrMW5Dqyyu&noverify=0&group_code=188488430";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6vy4Fd09KMT7MXHwa3UlHRXZVB61eVwd&authKey=sBDe20ERWr1hYJW%2FtWYyAS2Yyz%2BMJTKoJiWf6mU5Xsf%2B8MrcVOBV81Mhg75%2F2AuK&noverify=0&group_code=650574872";
 </script>
 </body>
 </html>
