--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6vy4Fd09KMT7MXHwa3UlHRXZVB61eVwd&authKey=sBDe20ERWr1hYJW%2FtWYyAS2Yyz%2BMJTKoJiWf6mU5Xsf%2B8MrcVOBV81Mhg75%2F2AuK&noverify=0&group_code=650574872";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=-oaVZR1ssAWADobcRwwCqLOkEKvd3_pL&authKey=8NcPWnaLnrGQl0oapf2QXYgOWekh4vnbxFePcLMhDTZplOyl0EswZvflRg%2Bxv9KN&noverify=0&group_code=743945109";
 </script>
 </body>
 </html>
