--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=fbBsy94qppnL6xpQtGVQ1Y34ygv8VA7i&authKey=S9dkrtc%2BwAeyU8hxgSK4Ex2fjxZlLzO3ZA6JpWPYCdVlK3T2EzKxfGoK1G%2BAu5xY&noverify=0&group_code=650667867";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=-oaVZR1ssAWADobcRwwCqLOkEKvd3_pL&authKey=8NcPWnaLnrGQl0oapf2QXYgOWekh4vnbxFePcLMhDTZplOyl0EswZvflRg%2Bxv9KN&noverify=0&group_code=743945109";
 </script>
 </body>
 </html>
