--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=-oaVZR1ssAWADobcRwwCqLOkEKvd3_pL&authKey=8NcPWnaLnrGQl0oapf2QXYgOWekh4vnbxFePcLMhDTZplOyl0EswZvflRg%2Bxv9KN&noverify=0&group_code=743945109";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=RLyo2s-ogaRfiUJdz8z9X7b0sVsbAW7F&authKey=xPVlzVIkxMquDPF9zjp861UztIC6oIbMgCTkxDcU1wzThjmODWQ8QwfG3AaqlGPy&noverify=0&group_code=599181825";
 </script>
 </body>
 </html>
