--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=RLyo2s-ogaRfiUJdz8z9X7b0sVsbAW7F&authKey=xPVlzVIkxMquDPF9zjp861UztIC6oIbMgCTkxDcU1wzThjmODWQ8QwfG3AaqlGPy&noverify=0&group_code=599181825";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=S68uzsLAKyEuUXsTSTv3OQ917tCxoDLB&authKey=rKkNU4uJdt8Fqwm%2FOypY2vhFXRJ1cQlAFC4TLas9I423BL%2FE1fwM%2B1Lpuh2xnyC2&noverify=0&group_code=546659265";
 </script>
 </body>
 </html>
