--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=S68uzsLAKyEuUXsTSTv3OQ917tCxoDLB&authKey=rKkNU4uJdt8Fqwm%2FOypY2vhFXRJ1cQlAFC4TLas9I423BL%2FE1fwM%2B1Lpuh2xnyC2&noverify=0&group_code=546659265";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=PZc7jKrkyTQ6NhOjvEJ9Cs0V_XFY1U3x&authKey=L2VoZBH3OJFSixrRQqBuNHs9cpwpJPfLdliNBgDyIPpQ0H4pcB9UbyPTY3i%2BbZBe&noverify=0&group_code=681173389";
 </script>
 </body>
 </html>
