--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=PZc7jKrkyTQ6NhOjvEJ9Cs0V_XFY1U3x&authKey=L2VoZBH3OJFSixrRQqBuNHs9cpwpJPfLdliNBgDyIPpQ0H4pcB9UbyPTY3i%2BbZBe&noverify=0&group_code=681173389";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=7ca8KkB540Zl7u1BQcCxOcAL0sANBdJ2&authKey=4UKhLRGPNnHx82967D2kTInu5FX%2FtCaFas4J0qGYo92rZhEmnQujKz51VujGA%2Bvl&noverify=0&group_code=596074003";
 </script>
 </body>
 </html>
