--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=7ca8KkB540Zl7u1BQcCxOcAL0sANBdJ2&authKey=4UKhLRGPNnHx82967D2kTInu5FX%2FtCaFas4J0qGYo92rZhEmnQujKz51VujGA%2Bvl&noverify=0&group_code=596074003";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=UkIjAayLmosytPEXuGRnSLc82cazid3X&authKey=9qXMzUqJsNlZzxIcHZBtxghfpkGZrhHiP2MPrQIRESaY4Fo7XPL5RqO8yNRbXAPy&noverify=0&group_code=469541356";
 </script>
 </body>
 </html>
