--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=UkIjAayLmosytPEXuGRnSLc82cazid3X&authKey=9qXMzUqJsNlZzxIcHZBtxghfpkGZrhHiP2MPrQIRESaY4Fo7XPL5RqO8yNRbXAPy&noverify=0&group_code=469541356";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=hqpB1AGb3E8pw9vlwbNRVT-HLVllhLax&authKey=uwkeNECfGQPxbtKw5bQQf54%2F41ui8%2BIebKE%2BT8B7CMJS4flWb8tZ%2FZuFtOjB6Rz5&noverify=0&group_code=824594816";
 </script>
 </body>
 </html>
