--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=hqpB1AGb3E8pw9vlwbNRVT-HLVllhLax&authKey=uwkeNECfGQPxbtKw5bQQf54%2F41ui8%2BIebKE%2BT8B7CMJS4flWb8tZ%2FZuFtOjB6Rz5&noverify=0&group_code=824594816";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=Yeoqfmh_7qaww4AkAu8d6bOXb8Av3jjA&authKey=d45CJ4T4OyWp9VD8ht%2Fl%2BFddupCPw%2FcRvaBn7HN1y9wtt7USPVtR3AtH1M3%2FeAVQ&noverify=0&group_code=630718147";
 </script>
 </body>
 </html>
