--- a/n.html
+++ b/n.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=Yeoqfmh_7qaww4AkAu8d6bOXb8Av3jjA&authKey=d45CJ4T4OyWp9VD8ht%2Fl%2BFddupCPw%2FcRvaBn7HN1y9wtt7USPVtR3AtH1M3%2FeAVQ&noverify=0&group_code=630718147";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lXYjOLtuZYOU1H1qbwcMKS6vPaO97-iU&authKey=4uzK8Au1p2qMyQ%2BU7msjyvl4FLUuBAgHbm3ajFmw5Vaow7m9SvMGdtendzHGb2Vt&noverify=0&group_code=857946773";
 </script>
 </body>
 </html>
