--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=lXYjOLtuZYOU1H1qbwcMKS6vPaO97-iU&authKey=4uzK8Au1p2qMyQ%2BU7msjyvl4FLUuBAgHbm3ajFmw5Vaow7m9SvMGdtendzHGb2Vt&noverify=0&group_code=857946773";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=CIvxDUdkwn7YNDVHRGbgmKsGqSVq6sCk&authKey=FdbS%2FnsMzyw1RJeVguHCf090fwl3hqxZy097S26p8jq9SmP7am3KBV8zNppHgLyU&noverify=0&group_code=833072911";
 </script>
 </body>
 </html>
