--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TS6sWFvZAjXDQaimrdIHcN5_WHrv7dxH&authKey=oRYV7gCB80EQRSYv5XxDXmg%2BnTD9sVApUUF7PW2HreRhm4s2I5VhYmzLgaaRt00I&noverify=0&group_code=198850333";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=CIvxDUdkwn7YNDVHRGbgmKsGqSVq6sCk&authKey=FdbS%2FnsMzyw1RJeVguHCf090fwl3hqxZy097S26p8jq9SmP7am3KBV8zNppHgLyU&noverify=0&group_code=833072911";
 </script>
 </body>
 </html>
