--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=CIvxDUdkwn7YNDVHRGbgmKsGqSVq6sCk&authKey=FdbS%2FnsMzyw1RJeVguHCf090fwl3hqxZy097S26p8jq9SmP7am3KBV8zNppHgLyU&noverify=0&group_code=833072911";
+location.href="https://qm.qq.com/cgi-bin/qm/qr?k=AZlAMcorgS9regywjSbULGFFY19OoaFq&jump_from=webapi&qr=1";
 </script>
 </body>
 </html>
