--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://qm.qq.com/cgi-bin/qm/qr?k=VaDIfhXSrnYTs6oVCVB9rbxV0IEfCY0K&jump_from=webapi&qr=1";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=zCN6ZrMCj3ouj1t982hhgWz7j5gnhlvX&authKey=Ct8pVRUnEdDcU42kiCIJBZDSD6586zg0SZ3%2F1WdVSWPSaFzcXm3FGkpBpZBQkhYM&noverify=0&group_code=111684384";
 </script>
 </body>
 </html>
