--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=zCN6ZrMCj3ouj1t982hhgWz7j5gnhlvX&authKey=Ct8pVRUnEdDcU42kiCIJBZDSD6586zg0SZ3%2F1WdVSWPSaFzcXm3FGkpBpZBQkhYM&noverify=0&group_code=111684384";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=YKNZDUP2dLVeR9xoCHH1CFWIuKgPqFFu&authKey=k3nqBJ%2FtdRMpBkyJZanlI0sBf8QU2%2FIsy1wZJXDYCQD14UMY%2Bkznb0gC6H%2F2YIXo&noverify=0&group_code=141451434";
 </script>
 </body>
 </html>
