--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=YKNZDUP2dLVeR9xoCHH1CFWIuKgPqFFu&authKey=k3nqBJ%2FtdRMpBkyJZanlI0sBf8QU2%2FIsy1wZJXDYCQD14UMY%2Bkznb0gC6H%2F2YIXo&noverify=0&group_code=141451434";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=b93MJDctfNFt32ha_PHCxSgMxgZlo2mR&authKey=2%2FNNLvy4BxbBXZuOiObLNEUcw6xMbWnu6mIUEyPGTRLRouAe72xQbAq40ykqZYgP&noverify=0&group_code=536724787";
 </script>
 </body>
 </html>
