--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=b93MJDctfNFt32ha_PHCxSgMxgZlo2mR&authKey=2%2FNNLvy4BxbBXZuOiObLNEUcw6xMbWnu6mIUEyPGTRLRouAe72xQbAq40ykqZYgP&noverify=0&group_code=536724787";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=MfRSW2CeyyQGkzb1K0lyqs00B-LAqEyl&authKey=TQHlPurwNBxo44Uc%2BeVhu9XQDnLvXctNAECs9Z%2FuysKu7ayg6KMuqph0H0IbrOCC&noverify=0&group_code=550124650";
 </script>
 </body>
 </html>
