--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=MfRSW2CeyyQGkzb1K0lyqs00B-LAqEyl&authKey=TQHlPurwNBxo44Uc%2BeVhu9XQDnLvXctNAECs9Z%2FuysKu7ayg6KMuqph0H0IbrOCC&noverify=0&group_code=550124650";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=k2a34tawAhV006K8N_8Unopl3__a85av&authKey=Jii9yH8xUbZNOcEvsXEzhyfPYL75RdtWz2hvzbxywhj86gOtUXYRXkSXmbmhdm5p&noverify=0&group_code=821459892";
 </script>
 </body>
 </html>
