--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=k2a34tawAhV006K8N_8Unopl3__a85av&authKey=Jii9yH8xUbZNOcEvsXEzhyfPYL75RdtWz2hvzbxywhj86gOtUXYRXkSXmbmhdm5p&noverify=0&group_code=821459892";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=67sf31uECeS6ZXDooeEqUovE1X6mq4O3&authKey=ztYek8ViqMKTSyF0DfmX5h0h05LFT6B0KgREEpLQyelFZYOrJr%2Bnynd%2B370kMrL0&noverify=0&group_code=751553379";
 </script>
 </body>
 </html>
