--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=67sf31uECeS6ZXDooeEqUovE1X6mq4O3&authKey=ztYek8ViqMKTSyF0DfmX5h0h05LFT6B0KgREEpLQyelFZYOrJr%2Bnynd%2B370kMrL0&noverify=0&group_code=751553379";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=mQOl2wPOzGsMyIBsha46OwMzmsm--LmW&authKey=1xQNMvppo6vlPSFeRvJMgU8snVzy0uwgvYMEr9Z%2Fg2sTgdDjFRtN5WsZtawJYKRh&noverify=0&group_code=332588969";
 </script>
 </body>
 </html>
