--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=mQOl2wPOzGsMyIBsha46OwMzmsm--LmW&authKey=1xQNMvppo6vlPSFeRvJMgU8snVzy0uwgvYMEr9Z%2Fg2sTgdDjFRtN5WsZtawJYKRh&noverify=0&group_code=332588969";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BG68SyzgGgVd8fJnHhbQudlTvMEK8GX4&authKey=NEbCLvqpHCchtOjqeiMSW23LkxbACZ1g4Sgy%2F6hOFSWu3mkTXPpi8fHQB%2F0JHFKu&noverify=0&group_code=697620146";
 </script>
 </body>
 </html>
