--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=BG68SyzgGgVd8fJnHhbQudlTvMEK8GX4&authKey=NEbCLvqpHCchtOjqeiMSW23LkxbACZ1g4Sgy%2F6hOFSWu3mkTXPpi8fHQB%2F0JHFKu&noverify=0&group_code=697620146";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=yva_e8vYg-RNhjMY-6eytK26o5zcOMFe&authKey=ogoPaW6%2F846hAjfI4nZu1SqcwzkVKrVtc4TUD5UClC%2BRRqFRQ1leuPjlWQ8Q20xi&noverify=0&group_code=305618692";
 </script>
 </body>
 </html>
