--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=yva_e8vYg-RNhjMY-6eytK26o5zcOMFe&authKey=ogoPaW6%2F846hAjfI4nZu1SqcwzkVKrVtc4TUD5UClC%2BRRqFRQ1leuPjlWQ8Q20xi&noverify=0&group_code=305618692";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=gkTp9GlCD7P0eU2xta-eEej_swor3zpj&authKey=v4e%2FRqEwDZQH6%2BCRbCkqeigXoQGtVxB36RryLeVaCUWDhl7nDf9cPzOXTMXL4C2I&noverify=0&group_code=815984575";
 </script>
 </body>
 </html>
