--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=gkTp9GlCD7P0eU2xta-eEej_swor3zpj&authKey=v4e%2FRqEwDZQH6%2BCRbCkqeigXoQGtVxB36RryLeVaCUWDhl7nDf9cPzOXTMXL4C2I&noverify=0&group_code=815984575";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=zfs6NWIW9uobi0rJNYMRBtRK0Ey4zzow&authKey=G98aqlKP8jVr9g5YdNYNtmnfW8%2FHBV3Z8gZTuw%2BWlVcZO7v4V4UqciLfzHOYV9rP&noverify=0&group_code=883777417";
 </script>
 </body>
 </html>
