--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=zfs6NWIW9uobi0rJNYMRBtRK0Ey4zzow&authKey=G98aqlKP8jVr9g5YdNYNtmnfW8%2FHBV3Z8gZTuw%2BWlVcZO7v4V4UqciLfzHOYV9rP&noverify=0&group_code=883777417";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=cnPUmFLwQkH3lJ5CzVvS68Kt_t9K3i_1&authKey=IMZ9kGJQjsYJ1et9yGU0ZUIKnuQ7EAVCuqoAeoQwBsqMZosIEduSp8fTHdqPtjX1&noverify=0&group_code=883788731";
 </script>
 </body>
 </html>
