--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=cnPUmFLwQkH3lJ5CzVvS68Kt_t9K3i_1&authKey=IMZ9kGJQjsYJ1et9yGU0ZUIKnuQ7EAVCuqoAeoQwBsqMZosIEduSp8fTHdqPtjX1&noverify=0&group_code=883788731";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=Ii9tuWovl7YtZ_msq1EIeROz1EyEbp-r&authKey=56qohpW0tT4ojLm3AQDWvE7MlvOuM8hB9x64YyaQ%2Fyc%2FmP2uijPU08L1%2Fj6xjCfD&noverify=0&group_code=884198472";
 </script>
 </body>
 </html>
