--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=Ii9tuWovl7YtZ_msq1EIeROz1EyEbp-r&authKey=56qohpW0tT4ojLm3AQDWvE7MlvOuM8hB9x64YyaQ%2Fyc%2FmP2uijPU08L1%2Fj6xjCfD&noverify=0&group_code=884198472";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=39t97YPHI08Q6yA36UBmbjES8s7Z-q5w&authKey=FTDqS980j%2BLJIcnwJ22XoZfW%2BfRrfwnZ2CSFCIy1WxyTQLGf2BZO23FrIZBMG2Gj&noverify=0&group_code=192087565";
 </script>
 </body>
 </html>
