--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=39t97YPHI08Q6yA36UBmbjES8s7Z-q5w&authKey=FTDqS980j%2BLJIcnwJ22XoZfW%2BfRrfwnZ2CSFCIy1WxyTQLGf2BZO23FrIZBMG2Gj&noverify=0&group_code=192087565";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=CU5pX3iYlpnZW1lDaLv7rVBoCNy8hCNe&authKey=1IRjN%2BFthW7KZTD09eAORqiTUYxl6RMAdSiIRVe7F5NTmRQkMBmIMoJrlEdlPLUW&noverify=0&group_code=728710471";
 </script>
 </body>
 </html>
