--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=CU5pX3iYlpnZW1lDaLv7rVBoCNy8hCNe&authKey=1IRjN%2BFthW7KZTD09eAORqiTUYxl6RMAdSiIRVe7F5NTmRQkMBmIMoJrlEdlPLUW&noverify=0&group_code=728710471";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=whWRZXUxameEh0OgaUubKxglggxV2i4H&authKey=ro8q0IFx0Ga2uOkUaCq0r47rsEnVj03jbNm5yg2QNCCxPkBkuCZ8DnNU3D8At7i6&noverify=0&group_code=581316503";
 </script>
 </body>
 </html>
