--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=whWRZXUxameEh0OgaUubKxglggxV2i4H&authKey=ro8q0IFx0Ga2uOkUaCq0r47rsEnVj03jbNm5yg2QNCCxPkBkuCZ8DnNU3D8At7i6&noverify=0&group_code=581316503";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=dXdxsZGGW5MuVIUd66tvbTHFUoDq4wni&authKey=adUofXbv32G9DvKDglehJgL3VvChvoWSmTKS00NaLxIkzIBkHWfgAwjJ%2BxyPnV9e&noverify=0&group_code=705119829";
 </script>
 </body>
 </html>
