--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=dXdxsZGGW5MuVIUd66tvbTHFUoDq4wni&authKey=adUofXbv32G9DvKDglehJgL3VvChvoWSmTKS00NaLxIkzIBkHWfgAwjJ%2BxyPnV9e&noverify=0&group_code=705119829";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=nqVv41KUw_0KJIPfceC6x0JSJQD_6T2l&authKey=UEhNA4c9RV1AdOPrdIA%2Bbtbivd2TOp1dNMs72WgtYrvaIOu%2BcW5CkhgFjLnNJhbd&noverify=0&group_code=684535651";
 </script>
 </body>
 </html>
