--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=nqVv41KUw_0KJIPfceC6x0JSJQD_6T2l&authKey=UEhNA4c9RV1AdOPrdIA%2Bbtbivd2TOp1dNMs72WgtYrvaIOu%2BcW5CkhgFjLnNJhbd&noverify=0&group_code=684535651";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=yokMfaKDjaoaw3U-aDCeAMUvoCwME0AN&authKey=9ZppOklm82qNaWwpDocMZE3e%2FaQxxpq%2BQrFA6Ajz4nOpjpsJ84wEz%2FOuI6K676LH&noverify=0&group_code=882493600";
 </script>
 </body>
 </html>
