--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=yokMfaKDjaoaw3U-aDCeAMUvoCwME0AN&authKey=9ZppOklm82qNaWwpDocMZE3e%2FaQxxpq%2BQrFA6Ajz4nOpjpsJ84wEz%2FOuI6K676LH&noverify=0&group_code=882493600";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=boNwzZDv2aUVO1t51JhaoseOy5RNED9f&authKey=tMbL6YxScQCJ6ftSvU30SVttDVPeLm0kgecWcqSM2qMkLMwEY5X9TVhoyb844bRg&noverify=0&group_code=850253014";
 </script>
 </body>
 </html>
