--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=boNwzZDv2aUVO1t51JhaoseOy5RNED9f&authKey=tMbL6YxScQCJ6ftSvU30SVttDVPeLm0kgecWcqSM2qMkLMwEY5X9TVhoyb844bRg&noverify=0&group_code=850253014";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=uD6MGOkYpKKwrIFByJFY6kfCe2j2U65a&authKey=M4IRjSWckyxjTuQ4Km4NT3lrGO8%2BDizGzrMPcgEbuHfy%2FAHQNF1TtT6C7jdixIQQ&noverify=0&group_code=254824675";
 </script>
 </body>
 </html>
