--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=uD6MGOkYpKKwrIFByJFY6kfCe2j2U65a&authKey=M4IRjSWckyxjTuQ4Km4NT3lrGO8%2BDizGzrMPcgEbuHfy%2FAHQNF1TtT6C7jdixIQQ&noverify=0&group_code=254824675";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=gTEwG7bKlT9RwJpAZsVPVq0nPfD64CeQ&authKey=fZ0VbRuQUpEv%2FZz%2BsL5ahQdbvnXVNuTt7%2F9tynL0M56ZgFiXIRCEZ6MNMJ7pnmIg&noverify=0&group_code=882487568";
 </script>
 </body>
 </html>
