--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=gTEwG7bKlT9RwJpAZsVPVq0nPfD64CeQ&authKey=fZ0VbRuQUpEv%2FZz%2BsL5ahQdbvnXVNuTt7%2F9tynL0M56ZgFiXIRCEZ6MNMJ7pnmIg&noverify=0&group_code=882487568";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=HcjWhkTjJ0ayIa62JtOb5pUGRgtY6LSo&authKey=Z%2FdWDn8%2FV%2BxbJBV3Ku6zI1%2BMF2gkJEFwY3ie15cVwbypTbCkWE0SMDHUTFZ3HBTM&noverify=0&group_code=892584458";
 </script>
 </body>
 </html>
