--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=HcjWhkTjJ0ayIa62JtOb5pUGRgtY6LSo&authKey=Z%2FdWDn8%2FV%2BxbJBV3Ku6zI1%2BMF2gkJEFwY3ie15cVwbypTbCkWE0SMDHUTFZ3HBTM&noverify=0&group_code=892584458";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=MEESirvEs2srNIYaJqO1ZKhBUlWKq117&authKey=UJN6ESQBuBC67fK5VMKrfI7KmIPOEvpl9Ri77AAiGCVU7d5fWBwZcsxZtbbQ8Ho8&noverify=0&group_code=436848610";
 </script>
 </body>
 </html>
