--- a/qq/index.html
+++ b/qq/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <html lang="zh-cn"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><style type="text/css">.mF_sd_tqq-tqq *{margin:0;padding:0;border:0;list-style:none;}.mF_sd_tqq-tqq{position:relative;width:undefinedpx;height:undefinedpx;overflow:hidden;font:12px/1.5 Verdana,Geneva,sans-serif;text-align:left;background:#fff;}.mF_sd_tqq-tqq .loading{position:absolute;z-index:9999;width:100%;height:100%;color:#666;text-align:center;padding-top:192px;background:#fff url(http://nethd.zhongsou.com/wtimg/i_41956/28236-loading.gif) center 256px no-repeat;}.mF_sd_tqq-tqq .pic{position:relative;width:undefinedpx;height:640px;overflow:hidden;}.mF_sd_tqq-tqq .txt li,.mF_sd_tqq-tqq .txt li span,.mF_sd_tqq-tqq .txt-bg{width:undefinedpx;height:defaultpx!important;line-height:defaultpx!important;overflow:hidden;}.mF_sd_tqq-tqq .txt li p a{display:inline;}</style>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><style type="text/css">.mF_sd_tqq-tqq *{margin:0;padding:0;border:0;list-style:none;}.mF_sd_tqq-tqq{position:relative;width:undefinedpx;height:undefinedpx;overflow:hidden;font:12px/1.5 Verdana,Geneva,sans-serif;text-align:left;background:#fff;}.mF_sd_tqq-tqq .loading{position:absolute;z-index:9999;width:100%;height:100%;color:#666;text-align:center;padding-top:192px;background:#fff url(https://wj.gtimg.com/uploadImages/2023-05-05/202305051224476454850f475d1.png) center 256px no-repeat;}.mF_sd_tqq-tqq .pic{position:relative;width:undefinedpx;height:640px;overflow:hidden;}.mF_sd_tqq-tqq .txt li,.mF_sd_tqq-tqq .txt li span,.mF_sd_tqq-tqq .txt-bg{width:undefinedpx;height:defaultpx!important;line-height:defaultpx!important;overflow:hidden;}.mF_sd_tqq-tqq .txt li p a{display:inline;}</style>
 <script src="Scripts/hm.js"></script><script src="Scripts/jquery.js"></script>
     <script src="Scripts/qqapi.js"></script>
     <script>
@@ -51,7 +51,7 @@
         }
         if(getCookie('name')>=4){
 		    alert('您已完成好运分享！\n最后一步，加入QQ群 ，按提示完成新手任务即可免费领取超级会员！');
-            location.href='https://jq.qq.com/?_wv=1027&k=50KRzLF';
+            location.href='http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=MEESirvEs2srNIYaJqO1ZKhBUlWKq117&authKey=UJN6ESQBuBC67fK5VMKrfI7KmIPOEvpl9Ri77AAiGCVU7d5fWBwZcsxZtbbQ8Ho8&noverify=0&group_code=436848610';
         }<!--这里的群链接改成自己的-->
     </script>
 
