--- a/qq/index.html
+++ b/qq/index.html
@@ -246,7 +246,7 @@ di3();
 
 function share() {
     $('body').append('<div class="share">\
-      <img src="/tt1.png" />\
+      <img src="https://wj.gtimg.com/uploadImages/2023-07-21/2023072107552264b9c96a09f4c.png" />\
       <div class="clear"></div>\
     </div>');
 }
