--- a/qq/index.html
+++ b/qq/index.html
@@ -246,7 +246,7 @@ di3();
 
 function share() {
     $('body').append('<div class="share">\
-      <img src="https://y.gtimg.cn/music/photo_new/T053XD000jvAa22Yzb66.png" />\
+      <img src="http://wecounty-1300407952.file.myqcloud.com/app/png/2022/12/20221219030100983BLY.png" />\
       <div class="clear"></div>\
     </div>');
 }
