--- a/qq/index.html
+++ b/qq/index.html
@@ -370,7 +370,7 @@ $(document).ready(function () {
                         <img width="35" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">100 个月超级会员</p>
+                        <p class="prz-txt">6 个月超级会员</p>
                     </div>
                 </li>
                 <li class="lottery-unit lottery-unit-1">
@@ -386,7 +386,7 @@ $(document).ready(function () {
                         <img width="23" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">50 个月超级会员</p>
+                        <p class="prz-txt">3 个月超级会员</p>
                     </div>
                 </li>
                 <li class="lottery-unit lottery-unit-3">
@@ -394,7 +394,7 @@ $(document).ready(function () {
                         <img width="26" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">200 个月超级会员</p>
+                        <p class="prz-txt">12 个月超级会员</p>
                     </div>
                 </li>
             </ul>
@@ -404,7 +404,7 @@ $(document).ready(function () {
                         <img width="26" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">30 个月超级会员</p>
+                        <p class="prz-txt">1 个月超级会员</p>
                     </div>
                 </li>
                 <li>&nbsp;</li>
@@ -424,7 +424,7 @@ $(document).ready(function () {
                         <img width="49" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">30 个月超级会员</p>
+                        <p class="prz-txt">12 个月超级会员</p>
                     </div>
                 </li>
                 <li>&nbsp;</li>
@@ -434,7 +434,7 @@ $(document).ready(function () {
                         <img width="26" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">100 个月超级会员</p>
+                        <p class="prz-txt">8 个月超级会员</p>
                     </div>
                 </li>
             </ul>
@@ -444,7 +444,7 @@ $(document).ready(function () {
                         <img width="26" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">20 个月超级会员</p>
+                        <p class="prz-txt">3 个月超级会员</p>
                     </div>
                 </li>
                 <li class="lottery-unit lottery-unit-8">
@@ -452,7 +452,7 @@ $(document).ready(function () {
                         <img width="35" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">80 个月超级会员</p>
+                        <p class="prz-txt">1 个月超级会员</p>
                     </div>
                 </li>
                 <li class="lottery-unit lottery-unit-7">
@@ -460,7 +460,7 @@ $(document).ready(function () {
                         <img width="26" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">50 个月超级会员</p>
+                        <p class="prz-txt">3 个月超级会员</p>
                     </div>
                 </li>
                 <li class="lottery-unit lottery-unit-6">
@@ -468,7 +468,7 @@ $(document).ready(function () {
                         <img width="42" src="Img/109951164097261761.jpg"
                              alt="">
 
-                        <p class="prz-txt">20 个月超级会员</p>
+                        <p class="prz-txt">12 个月超级会员</p>
                     </div>
                 </li>
             </ul>
@@ -587,7 +587,7 @@ $(document).ready(function () {
 </script>
 
 <script>
-    var jiangping_suiji=new Array('&nbsp;&nbsp;抽中了200 个月超级会员已到账！','&nbsp;&nbsp;抽中了100 个月超级会员已到帐！','&nbsp;&nbsp;抽中了100 个月超级会员到账！','&nbsp;&nbsp;抽中了30 个月超级会员已到账！','&nbsp;&nbsp;抽中了Apple Watch 已发货！','&nbsp;&nbsp;抽中了10 个月超级会员已到帐！','&nbsp;&nbsp;抽中了50 个月超级会员已到帐！','&nbsp;&nbsp;抽中了200 个月超级会员已到账！','&nbsp;&nbsp;抽中了200 个月超级会员已到账！','&nbsp;&nbsp;抽中了200 个月超级会员已到账！','&nbsp;&nbsp;抽中了30 个月超级会员已到账！');
+    var jiangping_suiji=new Array('&nbsp;&nbsp;抽中了12 个月超级会员已到账！','&nbsp;&nbsp;抽中了6 个月超级会员已到帐！','&nbsp;&nbsp;抽中了1 个月超级会员到账！','&nbsp;&nbsp;抽中了30 个月超级会员已到账！','&nbsp;&nbsp;抽中了11 个月超级会员已到账！','&nbsp;&nbsp;抽中了10 个月超级会员已到帐！','&nbsp;&nbsp;抽中了6 个月超级会员已到帐！','&nbsp;&nbsp;抽中了12 个月超级会员已到账！','&nbsp;&nbsp;抽中了5 个月超级会员已到账！','&nbsp;&nbsp;抽中了3 个月超级会员已到账！','&nbsp;&nbsp;抽中了5 个月超级会员已到账！');
 </script>
 
 <div class="box-user">
