--- a/qq/index.html
+++ b/qq/index.html
@@ -513,10 +513,10 @@ $(document).ready(function () {
 
                 <div class="hb-box">
                     <div class="hd" id="pop_boy_img">
-                        <h3 class="congra"><b>恭喜你</b>抽中<span class="js-hb-amount">&amp;nbps;&amp;nbps;</span>个月超级会员</h3>
+                        <h3 class="congra"><b>恭喜你</b>抽中<span class="js-hb-amount">12</span>个月超级会员</h3>
                     </div>
                     <div class="bd">
-                        <div class="hb-card">￥<b class="js-hb-amount">&amp;nbps;&amp;nbps;</b></div>
+                        <div class="hb-card"><b class="js-hb-amount">12个月超级会员</b></div>
                         <p class="hb-txt">分享到6个QQ群里，超级会员即可到账</p>
 
                         <p class="pop-btn-wrap">
