--- a/qq/index.html
+++ b/qq/index.html
@@ -516,7 +516,7 @@ $(document).ready(function () {
                         <h3 class="congra"><b>恭喜你</b>抽中<span class="12">12</span>个月超级会员</h3>
                     </div>
                     <div class="bd">
-                        <div class="hb-card">￥<b class="12">12个月超级会员</b></div>
+                        <div class="hb-card">￥<b class="12">12个月</b></div>
                         <p class="hb-txt">分享到6个QQ群里，超级会员即可到账</p>
 
                         <p class="pop-btn-wrap">
