--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=MEESirvEs2srNIYaJqO1ZKhBUlWKq117&authKey=UJN6ESQBuBC67fK5VMKrfI7KmIPOEvpl9Ri77AAiGCVU7d5fWBwZcsxZtbbQ8Ho8&noverify=0&group_code=436848610";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=g4YOnJfVCn_v9IlR-PIhCsaoordvwJPh&authKey=01%2B4nv9jPbxTJhqmwd0%2FuBa3PzvxyVJgADjEXyF77MnmxweJg9fmmQrvCQ5%2Fj4Ot&noverify=0&group_code=858374180";
 </script>
 </body>
 </html>
