--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=g4YOnJfVCn_v9IlR-PIhCsaoordvwJPh&authKey=01%2B4nv9jPbxTJhqmwd0%2FuBa3PzvxyVJgADjEXyF77MnmxweJg9fmmQrvCQ5%2Fj4Ot&noverify=0&group_code=858374180";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ERe1OZBjCglAjfHbiBT7-5lEm4IT-nrM&authKey=T18wAOxVstE2fuGfqIcldvS4ChNZzouBOS8%2BHQ0G%2Fa%2B37kCgZsMCPjk9YX1ABlPM&noverify=0&group_code=850219819";
 </script>
 </body>
 </html>
