--- a/qq/index.html
+++ b/qq/index.html
@@ -51,7 +51,7 @@
         }
         if(getCookie('name')>=4){
 		    alert('您已完成好运分享！\n最后一步，加入QQ群 ，按提示完成新手任务即可免费领取超级会员！');
-            location.href='http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=MEESirvEs2srNIYaJqO1ZKhBUlWKq117&authKey=UJN6ESQBuBC67fK5VMKrfI7KmIPOEvpl9Ri77AAiGCVU7d5fWBwZcsxZtbbQ8Ho8&noverify=0&group_code=436848610';
+            location.href='https://sharechain.qq.com/71990ee952f2f2469dbb2e2a8f432f27';
         }<!--这里的群链接改成自己的-->
     </script>
 
