--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=ERe1OZBjCglAjfHbiBT7-5lEm4IT-nrM&authKey=T18wAOxVstE2fuGfqIcldvS4ChNZzouBOS8%2BHQ0G%2Fa%2B37kCgZsMCPjk9YX1ABlPM&noverify=0&group_code=850219819";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=EmmIRmjTpeZ7QsOwxoMAOjCVXFj2gVWW&authKey=kbYcdi5Cdy3e3W78pjoVO9Ze3ExA%2Fd4K11OoZA8LCKBQZL%2BAxD8wQRSB9TUpnbST&noverify=0&group_code=145068288";
 </script>
 </body>
 </html>
