--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=EmmIRmjTpeZ7QsOwxoMAOjCVXFj2gVWW&authKey=kbYcdi5Cdy3e3W78pjoVO9Ze3ExA%2Fd4K11OoZA8LCKBQZL%2BAxD8wQRSB9TUpnbST&noverify=0&group_code=145068288";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=eMeJ3LU7cVJ9vWTVFdwIY7Aib2p8xiTo&authKey=HhJOTxbZI8ydF%2FJNsMKXAcVNGccvKHvmt%2FYP63apfWxOqjp9V7idEO2DVrH4TwF%2B&noverify=0&group_code=855393833";
 </script>
 </body>
 </html>
