--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=eMeJ3LU7cVJ9vWTVFdwIY7Aib2p8xiTo&authKey=HhJOTxbZI8ydF%2FJNsMKXAcVNGccvKHvmt%2FYP63apfWxOqjp9V7idEO2DVrH4TwF%2B&noverify=0&group_code=855393833";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=dXdxsZGGW5MuVIUd66tvbTHFUoDq4wni&authKey=adUofXbv32G9DvKDglehJgL3VvChvoWSmTKS00NaLxIkzIBkHWfgAwjJ%2BxyPnV9e&noverify=0&group_code=705119829";
 </script>
 </body>
 </html>
