--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=dXdxsZGGW5MuVIUd66tvbTHFUoDq4wni&authKey=adUofXbv32G9DvKDglehJgL3VvChvoWSmTKS00NaLxIkzIBkHWfgAwjJ%2BxyPnV9e&noverify=0&group_code=705119829";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=9tdnHWzdjosp0V1vZXAeTT3pC5DM19fD&authKey=jlXjjg9CEI8SINbi5XJPJofLbDHO%2BBA60f%2F%2BjXjmgsAImrHJLN%2BeqasCJtb5tUln&noverify=0&group_code=332588969";
 </script>
 </body>
 </html>
