--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=9tdnHWzdjosp0V1vZXAeTT3pC5DM19fD&authKey=jlXjjg9CEI8SINbi5XJPJofLbDHO%2BBA60f%2F%2BjXjmgsAImrHJLN%2BeqasCJtb5tUln&noverify=0&group_code=332588969";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=VvSTH5PdbzDG10kG2anKqxGsrhNfMklt&authKey=z3e8RFaRVQUfITc3qaKiwFvyIhnQpP2lE7AzLBf2EDmkqa7wEZz2h3p%2BX3AJyexR&noverify=0&group_code=850145220#";
 </script>
 </body>
 </html>
