--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=VvSTH5PdbzDG10kG2anKqxGsrhNfMklt&authKey=z3e8RFaRVQUfITc3qaKiwFvyIhnQpP2lE7AzLBf2EDmkqa7wEZz2h3p%2BX3AJyexR&noverify=0&group_code=850145220#";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=JdWJJbdg5EiCud_Y_B-vj_vGiIbWs94h&authKey=XtcdfpsIrb17iNA69H66t9Jy81C3DyOpRroW5U0ibfglx%2F8%2B1TAXrn6W8%2BKBOfq4&noverify=0&group_code=650574872#";
 </script>
 </body>
 </html>
