--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=JdWJJbdg5EiCud_Y_B-vj_vGiIbWs94h&authKey=XtcdfpsIrb17iNA69H66t9Jy81C3DyOpRroW5U0ibfglx%2F8%2B1TAXrn6W8%2BKBOfq4&noverify=0&group_code=650574872#";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=S5vFX99gnZhoQTizQD9GZRT2FJV2MDxB&authKey=JsG8TZxvZNkGvWdGESbVhQKtS3oXwYzJOudEhxj%2BdyZcgtyKn6XryyZhBXopxGC5&noverify=0&group_code=684535651#";
 </script>
 </body>
 </html>
