--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=JMAvKfAR4cCMyam0ngg9LUuqgfQH7YLa&authKey=X5zZNH3qd1XA0Fl4hfieBh2LNmBTP1Y6x1cNNgnYcErKAh1brgTwC%2BQ1Hn5I5oRd&noverify=0&group_code=599240900#";
+location.href="http://baidu.com";
 </script>
 </body>
 </html>
