--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title></title>
+<title>欢迎回家~</title>
 </head>
 <body>
 <script>
-location.href="http://baidu.com";
+location.href="https://qm.qq.com/cgi-bin/qm/qr?k=7VElZKZqdwUwCISObygHU8R7ywzLWT-h&jump_from=webapi&authKey=algu+/vJEKtNmcbdGv3x/3d9E4XS6bT5QI6QSuEPeN9E+jrmlh62j6b9wrkbzo5I";
 </script>
 </body>
 </html>
