--- a/r1.html
+++ b/r1.html
@@ -97,7 +97,7 @@
   <h10><a href="https://store.mp.video.tencent-cloud.com/162/20302/snssvpdownload/SZ/reserved/0b53kaaaiaaaeyafwftj4zskougdariaabaa.f100001.mp4">密码获取详细教程</a></h10>
   <h3><a>↓ 获取密码方法 ↓</a></h3>
   <div style="display: flex; justify-content: center;">
-    <img style="max-width: 60%; height: auto;" src="https://foruda.gitee.com/images/1684626917219910785/fe942322_12626235.png这里放二维码图床地址" alt="暂无图片">
+    <img style="max-width: 60%; height: auto;" src="https://shp.qpic.cn/collector/1595038/e042a95f-65a9-4828-8164-50dbec18edc9/0" alt="暂无图片">
   </div>
   <p style="text-align: center;"><a>长按图片保存用VX扫一扫二维码<br>点击右下角详情，观看广告后自动复制密码！</a></p>
 </div>
