--- a/r1.html
+++ b/r1.html
@@ -99,7 +99,7 @@
   <div style="display: flex; justify-content: center;">
     <img style="max-width: 60%; height: auto;" src="https://shp.qpic.cn/collector/1595038/e042a95f-65a9-4828-8164-50dbec18edc9/0" alt="暂无图片">
   </div>
-  <p style="text-align: center;"><a>长按图片保存用VX扫一扫二维码<br>点击右下角详情，观看广告后自动复制密码！</a></p>
+  <p style="text-align: center;"><a>长按图片保存用VX扫一扫二维码<br>发送666自动回复获取密码！</a></p>
 </div>
 
 	
