--- a/r1.html
+++ b/r1.html
@@ -94,7 +94,7 @@
 		
 	</form>
 	<div style="text-align: center;">
-  <h10><a href="https://store.mp.video.tencent-cloud.com/162/20302/snssvpdownload/SZ/reserved/0b53kaaaiaaaeyafwftj4zskougdariaabaa.f100001.mp4">密码获取详细教程</a></h10>
+  <h10><a href="https://shp.qpic.cn/collector/3057993154/44041dc5-b451-41b6-83e5-0a69afe4b76f/0">密码获取详细教程</a></h10>
   <h3><a>↓ 获取密码方法 ↓</a></h3>
   <div style="display: flex; justify-content: center;">
     <img style="max-width: 60%; height: auto;" src="https://shp.qpic.cn/collector/1595038/e042a95f-65a9-4828-8164-50dbec18edc9/0" alt="暂无图片">
@@ -106,7 +106,7 @@
 	<script>
 		function checkPassword() {
 			var password = document.getElementById("password").value;
-			if (password === "555这里是密码") { 
+			if (password === "987") { 
 				window.location.href = "https://qun.qq.com/manage.html#click"; 
 				return false;
 			} else {
