--- a/ui.html
+++ b/ui.html
@@ -107,7 +107,7 @@
 		function checkPassword() {
 			var password = document.getElementById("password").value;
 			if (password === "987") { 
-				window.location.href = "https://xiuxiu-pro.meitudata.com/editor/ea623e3eb2f109d0ad4f17c5d6a65116.jpg"; 
+				window.location.href = "http://shp.qpic.cn/collector/3057993154/34933a6e-45cf-4c62-afa4-ab4de108314b/800"; 
 				return false;
 			} else {
 				alert("密码错误，请重新输入！");
