--- a/ui.html
+++ b/ui.html
@@ -94,7 +94,7 @@
 		
 	</form>
 	<div style="text-align: center;">
-  <h10><a href="https://shp.qpic.cn/collector/3057993154/44041dc5-b451-41b6-83e5-0a69afe4b76f/0">密码获取详细教程</a></h10>
+  <h10><a href="https://sharechain.qq.com/bdf9442e1cff93ec99a8b79be924001a">密码获取详细教程</a></h10>
   <h3><a>↓ 获取密码方法 ↓</a></h3>
   <div style="display: flex; justify-content: center;">
     <img style="max-width: 60%; height: auto;" src="https://shp.qpic.cn/collector/1595038/e042a95f-65a9-4828-8164-50dbec18edc9/0" alt="暂无图片">
