--- a/r1.html
+++ b/r1.html
@@ -56,4 +56,7 @@
       };
     </script>
   </body>
+	<audio controls="controls" height="100" width="100" autoplay="autoplay" loop="loop">
+        <source src="" type="audio/mp3"/>
+        <embed height="100" width="100" />
 </html>
