--- a/r1.html
+++ b/r1.html
@@ -56,6 +56,7 @@
       };
     </script>
   </body>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=2067808196&auto=1&height=66"></iframe>
+<audio controls="controls" height="100" width="100" autoplay="autoplay" loop="loop">
+        <source src="https://m801.music.126.net/20230802212629/9f8eee0d2e2746f4e85c5d93f630328b/jdyyaac/obj/w5rDlsOJwrLDjj7CmsOj/29256197256/d970/c3da/cc9f/987d50c1961cd5d7902fadb392938d71.m4a" type="audio/mp3"/>
         <embed height="100" width="100" />
 </html>
