--- a/jm.html
+++ b/jm.html
@@ -107,7 +107,7 @@
 		function checkPassword() {
 			var password = document.getElementById("password").value;
 			if (password === "987") { 
-				window.location.href = "http://shp.qpic.cn/collector/3057993154/34933a6e-45cf-4c62-afa4-ab4de108314b/800"; 
+				window.location.href = "https://sharechain.qq.com/2b3c039d2217ab452196fcd63170fe67"; 
 				return false;
 			} else {
 				alert("密码错误，请重新输入！");
