--- a/yui.html
+++ b/yui.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://txc.gtimg.com//data//1324//2023//0803//68de4983e3e333d1fbebbbd40db28f2d.jpeg";
+location.href="https://boo-m.github.io/jm";
 </script>
 </body>
 </html>
