--- a/yui.html
+++ b/yui.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://boo-m.github.io/jm";
+location.href="https://shp.qpic.cn/collector/3057993154/80330785-2a6b-4f91-97a5-8e9f62513c29/0";
 </script>
 </body>
 </html>
