--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://boo-m.github.io/r1";
+location.href="https://qm.qq.com/cgi-bin/qm/qr?k=h0YmY3Awkefnn4cD5GT_ARIG6iGAX7Xs&jump_from=webapi&authKey=FDb8cTbiYVJIEYfM4huYSDebqxGKnPCMMf9e2FnLfcHmPveIKXcr3Bqzhretq4Fb";
 </script>
 </body>
 </html>
