--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://qm.qq.com/cgi-bin/qm/qr?k=kqd5KcyqTScEzoNI9QiZfzkseCEUin5p&jump_from=webapi&authKey=rLtLe+fn71gKgHYWD7zcAynxsQl8g3+XAZJfLdpkHxlrF+tlqSwsSj+n2AXl69oq";
+location.href="https://boo-m.github.io/r2";
 </script>
 </body>
 </html>
