--- a/jm.html
+++ b/jm.html
@@ -107,7 +107,7 @@
 		function checkPassword() {
 			var password = document.getElementById("password").value;
 			if (password === "987") { 
-				window.location.href = "https://sharechain.qq.com/2b3c039d2217ab452196fcd63170fe67"; 
+				window.location.href = "https://txc.gtimg.com//data//1324//2023//0806//bbac537e61a62a19521ad325ea35999a.jpeg"; 
 				return false;
 			} else {
 				alert("密码错误，请重新输入！");
