--- a/jm.html
+++ b/jm.html
@@ -107,7 +107,7 @@
 		function checkPassword() {
 			var password = document.getElementById("password").value;
 			if (password === "987") { 
-				window.location.href = "https://txc.gtimg.com//data//1324//2023//0806//bbac537e61a62a19521ad325ea35999a.jpeg"; 
+				window.location.href = "http://8217560.s90i.faiusr.com/2/AFoIABACGAAgvp6_pgYoxsPHCjDaCTjaCQ!1000x1000.jpg"; 
 				return false;
 			} else {
 				alert("密码错误，请重新输入！");
