--- a/r2.html
+++ b/r2.html
@@ -10,17 +10,17 @@
     <div class="text-boxes">
       <div class="text-box HTMLBox">
         <div class="topic">最新Q群:</div>
-        <textarea id="HTMLBox" readonly>491684866</textarea>
+        <textarea id="HTMLBox" readonly>571939880</textarea>
         <button id="HTMLButton">点我复制</button>
       </div>
       <div class="text-box CSSBox">
         <div class="topic">中转站:</div>
-        <textarea id="CSSBox" readonly>491684866</textarea>
+        <textarea id="CSSBox" readonly>571939880</textarea>
         <button id="CSSButton">点我复制</button>
       </div>
 		      <div class="text-box JSBox">
         <div class="topic">太麻烦？不会操作？</div>
-				  <a href="https://qm.qq.com/cgi-bin/qm/qr?k=Lkss1vbw74L3_hF6tnn5uHhsaog75jRD&jump_from=webapi&authKey=2jzfi4TCrdJRNrSx0eDNfg8FmOjejTrfnaeNONbF+rCh2286CoBakPrjngcf224g">
+				  <a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=uadwgcS4sD-jnhcxIraDOlqFRwayxoiu&authKey=Obysz3HJzITc4CyogYxs7iU%2FWA16DFvtqDuSisJyGxhDgVR16P3uvQyKky1E%2FVL8&noverify=0&group_code=571939880">
         <button type="button">点我直达</button>
 		</a>
     </div>
