--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://d.srul.cn/BJ5noNX";
+location.href="https://qm.qq.com/cgi-bin/qm/qr?k=g5tWyT9xtK7HE_djpWrFM-J7_DmXHNzR&jump_from=webapi&authKey=LfJ59pGZ4XqTpT7KV6aFGE0PTk49JPr0SyViSDJ3oFEms8I5qnM0swDpAFsCcS9h";
 </script>
 </body>
 </html>
