--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="https://qm.qq.com/cgi-bin/qm/qr?k=g5tWyT9xtK7HE_djpWrFM-J7_DmXHNzR&jump_from=webapi&authKey=LfJ59pGZ4XqTpT7KV6aFGE0PTk49JPr0SyViSDJ3oFEms8I5qnM0swDpAFsCcS9h";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=iQT5fDSZbDXRwDBLwzSBvmcjk-VGshzD&authKey=4dplo7%2BMLcVTzi9evh8tRmymJ2Adso8O2Q1Y%2B2lAVEU9gJozVXzauh0JiJRFORDY&noverify=0&group_code=571939880";
 </script>
 </body>
 </html>
