--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=iQT5fDSZbDXRwDBLwzSBvmcjk-VGshzD&authKey=4dplo7%2BMLcVTzi9evh8tRmymJ2Adso8O2Q1Y%2B2lAVEU9gJozVXzauh0JiJRFORDY&noverify=0&group_code=571939880";
+location.href="https://qm.qq.com/q/PKoYRdMa4M";
 </script>
 </body>
 </html>
