--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=MwQIGYYbfaiIUG95MjhJyuAS36rRCHuV&authKey=8Pjl7sd0OgyU57ENILGmsoo%2FB23WmqMYLlgoNoWVNaEYxm%2FBVAuPFPT22TuRBtzB&noverify=0&group_code=617323534";
+location.href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=uQUI6HGDYPpQzOnnlcYPo8FeXa5ck0a8&authKey=P5YCadzlAuUD98aDr6QpDGxTMcKXkB5DftPlkhAjDmYblzMzfQwcIyD5Xgqjvnfc&noverify=0&group_code=158648281";
 </script>
 </body>
 </html>
